--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -27,6 +27,7 @@
         app:layout_constraintTop_toBottomOf="@+id/createPlaylist" />
 
     <TextView
+        android:id="@+id/playlist_placeholder_message"
         style="@style/mediatekaText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,5 +38,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/playlists_placeholder" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/playlists_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="6dp"
+        android:paddingBottom="64dp"
+        android:layout_marginTop="8dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/createPlaylist"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
