--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,27 +8,50 @@
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.practicum.playlistmaker.search.ui.SearchFragment"
-        android:label="SearchFragment" />
+        android:label="SearchFragment" >
+        <action
+            android:id="@+id/action_searchFragment_to_audioPlayerFragment"
+            app:destination="@id/audioPlayerFragment" />
+    </fragment>
     <fragment
         android:id="@+id/mediatekaFragment"
         android:name="com.practicum.playlistmaker.mediateka.ui.MediatekaFragment"
         android:label="fragment_mediateka"
         tools:layout="@layout/fragment_mediateka" >
         <action
-            android:id="@+id/action_mediatekaFragment_to_audioPlayerActivity"
-            app:destination="@id/audioPlayerActivity" />
+            android:id="@+id/action_mediatekaFragment_to_audioPlayerFragment2"
+            app:destination="@id/audioPlayerFragment" />
         <action
-            android:id="@+id/action_mediatekaFragment_to_audioPlayerActivity2"
-            app:destination="@id/audioPlayerActivity" />
+            android:id="@+id/action_mediatekaFragment_to_audioPlayerFragment"
+            app:destination="@id/audioPlayerFragment" />
+        <action
+            android:id="@+id/action_mediatekaFragment_to_newPlaylistFragment"
+            app:destination="@id/newPlaylistFragment" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.practicum.playlistmaker.settings.ui.activity.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
-    <activity
-        android:id="@+id/audioPlayerActivity"
-        android:name="com.practicum.playlistmaker.player.ui.AudioPlayerActivity"
-        android:label="AudioPlayerActivity" />
+    <fragment
+        android:id="@+id/audioPlayerFragment"
+        android:name="com.practicum.playlistmaker.player.ui.AudioPlayerFragment"
+        android:label="AudioPlayerFragment">
+        <argument
+            android:name="track"
+            app:argType="com.practicum.playlistmaker.search.domain.models.Track" />
+        <action
+            android:id="@+id/action_audioPlayerFragment_to_newPlaylistFragment"
+            app:destination="@id/newPlaylistFragment" />
+
+    </fragment>
+    <fragment
+        android:id="@+id/newPlaylistFragment"
+        android:name="com.practicum.playlistmaker.mediateka.ui.NewPlaylistFragment"
+        android:label="NewPlaylistFragment" />
+    <fragment
+        android:id="@+id/fragmentPlaylists"
+        android:name="com.practicum.playlistmaker.mediateka.ui.FragmentPlaylists"
+        android:label="FragmentPlaylists" />
 
 </navigation>
