--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -224,4 +224,46 @@
         <item name="itemTextColor">@color/bottom_nav_item_color_night</item>
         <item name="itemIconTint">@color/bottom_nav_item_color_night</item>
     </style>
+
+    <style name="playlistHeaderTextStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:layout_marginStart">30dp</item>
+    </style>
+
+    <style name="InputTextStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="playlist_text_12sp">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+    </style>
+
+    <style name="playlist_name_text">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_marginTop">14dp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="tracks_count_bottom_sheet">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="CustomAlertDialogTheme" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+        <item name="colorPrimary">@color/white</item> <!-- Цвет положительной кнопки -->
+        <item name="colorSecondary">@color/white</item> <!-- Цвет нейтральной кнопки -->
+    </style>
 </resources>
